--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -461,6 +461,10 @@ a.sidebar-link:hover {
 }
 
 .icon-custom {
+    /* Inicialmente sin animación */
+}
+
+.card:hover .icon-custom {
     animation: icon-bounce 1.5s infinite;
 }
 
